--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -1,11 +1,11 @@
 # Packages {#packages}
 
-
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
 
+<img src="general/figures/mia_logo.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
 
 ## Package installation
 
@@ -14,7 +14,7 @@ of `SummarizedExperiment` and related data containers. One of these is
 `mia`. The installation for this and other packages has the following
 procedure.
 
-Stable Biocondcuctor release version can be installed with:
+Stable Bioconductor release version can be installed with:
 
 ```{r eval=FALSE, message=FALSE}
 BiocManager::install("microbiome/mia")
