--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,5 @@
 --- 
-title: |
-  Orchestrating Microbiome Analysis
-  ![](general/figures/mia_logo.png){width=1in}
+title: "Orchestrating Microbiome Analysis"
 documentclass: book
 site: bookdown::bookdown_site
 bibliography: [book.bib]
