transfered the fido example to extras

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -495,133 +495,9 @@ group-wise associations.
 
 ## Tree-based methods
 
-### Group-wise associations testing based on balances with fido
+### Group-wise associations testing based on balances
 
-[TreeSummarizedExperiment](https://bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html) 
-frequently includes a Phylogenetic tree along with associated data about the
-experiment (at `colData`), that holds covariates which can be used for
-analyzing group-wise associations. 
-
-Such an analysis could be performed with the function `pibble` from the `fido`
-package, that offers a Multinomial Logistic-Normal Linear Regression model; see
-[vignette](https://jsilve24.github.io/fido/articles/introduction-to-fido.html) of package.
-
-
-The following presents such an exemplary analysis based on the 
-data of @Sprockett2020 available
-through `microbiomeDataSets` package.
-
-
-```{r, message=FALSE, warning=FALSE}
-if (!require(fido)){
-  # installing the fido package
-  devtools::install_github("jsilve24/fido")
-}
-```
-
-Loading the libraries and importing data:
-
-```{r}
-library(fido)
-library(mia)
-```
-
-```{r, message=FALSE, warning=FALSE, eval=FALSE}
-library(microbiomeDataSets)
-tse <- SprockettTHData()
-```
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-# saveRDS(tse, file="data/SprockettTHData.Rds")
-# Hidden reading of the saved data
-tse <- readRDS("data/SprockettTHData.Rds")
-```
-
-
-We pick three covariates ("Sex","Age_Years","Delivery_Mode") during this
-analysis as an example, and beforehand we check for missing data:
-
-
-```{r}
-cov_names <- c("Sex","Age_Years","Delivery_Mode")
-na_counts <- apply(is.na(colData(tse)[,cov_names]), 2, sum)
-na_summary<-as.data.frame(na_counts,row.names=cov_names)
-```
-
-We drop samples with na values at the covariates (features) under analysis: 
-
-
-```{r}
-tse <- tse[ , !is.na(colData(tse)$Delivery_Mode) ]
-tse <- tse[ , !is.na(colData(tse)$Age_Years) ]
-```
-
-We agglomerate the data at a Phylum rank.
-Note: Large assay data (along with the covariates/features data) could prevent the analysis later,
-since the computation will construct matrices that would not always fit memory.
-
-```{r}
-tse_phylum <- agglomerateByRank(tse, "Phylum")
-```
-
-We extract the counts assay and feature data to build the model matrix having
-an extra row of ones presenting the intercept for the regression task later: 
-
-```{r}
-Y <- assays(tse_phylum)$counts
-# design matrix
-# taking 3 covariates
-sample_data<-as.data.frame(colData(tse_phylum)[,cov_names])
-X <- t(model.matrix(~Sex+Age_Years+Delivery_Mode,data=sample_data))
-```
-
-Building the parameters for the `pibble` call to build the model; see more at [vignette](https://jsilve24.github.io/fido/articles/introduction-to-fido.html):
-
-```{r}
-n_taxa<-nrow(Y)
-upsilon <- n_taxa+3
-Omega <- diag(n_taxa)
-G <- cbind(diag(n_taxa-1), -1)
-Xi <- (upsilon-n_taxa)*G%*%Omega%*%t(G)
-Theta <- matrix(0, n_taxa-1, nrow(X))
-Gamma <- diag(nrow(X))
-```
-
-Automatically initializing the priors and visualizing their distributions:
-
-```{r}
-priors <- pibble(NULL, X, upsilon, Theta, Gamma, Xi)
-names_covariates(priors) <- rownames(X)
-plot(priors, pars="Lambda") + ggplot2::xlim(c(-5, 5))
-```
-
-Estimating the posterior by including the data at `Y`.
-Note: Some computational failures could occur (see [discussion](https://github-wiki-see.page/m/jsilve24/fido/wiki/Frequently-Asked-Questions))
-the arguments `multDirichletBoot` `calcGradHess` could be passed in such case.
-
-```{r}
-priors$Y <- Y 
-posterior <- refit(priors, optim_method="adam", multDirichletBoot=0.5) # ,, calcGradHess=FALSE
-```
-
-Printing a summary about the posterior predictive distribution:
-
-```{r}
-ppc_summary(posterior)
-```
-Plotting the summary of the posterior distributions of the regression parameters:
-
-```{r}
-names_categories(posterior) <- rownames(Y)
-plot(posterior,par="Lambda",focus.cov=rownames(X)[2:4])
-```
-
-Seemingly the covariate "Age_Years" does not have effect on the model as "Delivery_Mode" would,
-and "Sex" to some extent. Let's take a closer look at the two latter ones:
-
-```{r}
-plot(posterior, par="Lambda", focus.cov = rownames(X)[c(2,4)])
-```
+TO DO!!!
 
 ## Session Info {-}
 
