renamed file + links + render config

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -451,7 +451,7 @@ plot <-plotReducedDim(tse_Genus,"PCoA_BC", colour_by = "most_abundant") +
 plot
 ```
 
-Note: A 3D interactive version of the earlier plot can be found from [here](https://microbiome.github.io/OMA/interactive-3d-plots.html).
+Note: A 3D interactive version of the earlier plot can be found from [here](https://microbiome.github.io/OMA/extra-materials.html).
 
 Similarly let's visualize and compare the sub-population.
 
