--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -282,15 +282,16 @@ rda <- calculateRDA(enterotype, assay_name = "relabundance",
 # Get the rda object
 rda <- attr(rda, "rda")
 # Calculate p-value and variance for whole model
+# Recommendation: use 999 permutations instead of 99
 set.seed(436)
-permanova <- anova.cca(rda, permutations = 999)
+permanova <- anova.cca(rda, permutations = 99)
 # Create a data.frame for results
 rda_info <- as.data.frame(permanova)["Model", ]
 
 # Calculate p-value and variance for each variable
 # by = "margin" --> the order or variables does not matter
 set.seed(4585)
-permanova <- anova.cca(rda, by = "margin",  permutations = 999)
+permanova <- anova.cca(rda, by = "margin",  permutations = 99)
 # Add results to data.frame
 rda_info <- rbind(rda_info, permanova)
 
