--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -145,20 +145,19 @@ We use the R [MOFA2](https://biofam.github.io/MOFA2/index.html) package
 for the analysis, and [install](https://biofam.github.io/MOFA2/installation.html) the corresponding dependencies.
 
 ```{r, message=FALSE, warning=FALSE}
-# For inter-operability between Python and R, and setting Python dependencies,
-# reticulate package is needed
-if(!require(reticulate)){
-    install.packages("https://cran.r-project.org/src/contrib/Archive/reticulate/reticulate_1.26.tar.gz",
-                     repos = NULL, type = "source")
-}
-
 if(!require(MOFA2)){
     BiocManager::install("MOFA2")
 }
 
+# For inter-operability between Python and R, and setting Python dependencies,
+# reticulate package is needed
+if(!require(reticulate)){
+    install.packages("reticulate")
+}
+
 reticulate::install_miniconda(force = TRUE)
 reticulate::use_miniconda(condaenv = "env1", required = FALSE)
-reticulate::py_install(packages = c("mofapy2"), pip = TRUE, python_version=3.6)
+reticulate::py_install(packages = c("mofapy2"), pip = TRUE)
 ```
 
 The `mae` object could be used straight to create the MOFA model. Yet, we transform 
