Fix bibtex references §

--- a/90_acknowledgments.Rmd
+++ b/90_acknowledgments.Rmd
@@ -56,7 +56,7 @@ resources by Solomon Kurz [@McElreath2020] are key references that
 advanced reproducible data science training and dissemination. The
 Orchestrating Single-Cell Analysis with Bioconductor, or _OSCA_ book
 by Robert Amezquita, Aaron Lun, Stephanie Hicks, and Raphael Gottardo
-[@Amezquita2020] has implemented closely related work on the
+[@Amezquita2020b] has implemented closely related work on the
 _SummarizedExperiment_ data container and its derivatives in the field
 of single cell sequencing studies. Many approaches used in this book
 have been derived from the [OSCA
