--- a/book.bib
+++ b/book.bib
@@ -1,4 +1,4 @@
-@Book{Amezquita2020,
+@Book{Amezquita2020a,
   author =	 {Robert Amezquita and Aaron Lun and Stephanie Hicks
                   and Raphael Gottardo},
   title =	 {Orchestrating Single-Cell Analysis with
@@ -8,7 +8,7 @@
   url =		 {https://bioconductor.org/books/release/OSCA/}
 }
 
-@Article{Amezquita2020,
+@Article{Amezquita2020b,
   author =	 {Robert A. Amezquita and Aaron T.L. Lun and Etienne
                   Becht and Vince J. Carey and Lindsay N. Carpp and
                   Ludwig Geistlinger and Federico Marini and Kevin
