--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ as well.
 
 This work has been heavily influenced by other similar resources, in
 particular the Orchestrating Single-Cell Analysis with Bioconductor
-[@Amezquita2020], [phyloseq
+[@Amezquita2020a], [phyloseq
 tutorials](http://joey711.github.io/phyloseq/tutorials-index)
 [@Callahan2016] and [microbiome
 tutorials](https://microbiome.github.io/tutorials/) [@Shetty2019].
