--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -44,8 +44,8 @@ Some of the R packages supporting the framework include:
 
 - [mia](microbiome.github.io/mia): Microbiome analysis tools [@R-mia]
 - [miaViz](microbiome.github.io/miaViz): Microbiome analysis specific visualization [@Ernst2022]
-- [miaSim](microbiome.github.io/miaSim): Microbiome data simulations [@miaSim2021]
-- [miaTime](microbiome.github.io/miaTime): Microbiome time series analysis [@miaTime2021]
+- [miaSim](microbiome.github.io/miaSim): Microbiome data simulations [@Simsek2021]
+- [miaTime](microbiome.github.io/miaTime): Microbiome time series analysis [@Lahti2021]
 - philr (external, @Silverman2017)
 
 
