--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -49,7 +49,8 @@ data into SE object you can find from [here](https://microbiome.github.io/OMA/co
 
 ```{r cross-correlation1}
 # Load the data
-mae <- microbiomeDataSets::HintikkaXOData()
+data(HintikkaXOData, package = "mia")
+mae <- HintikkaXOData
 
 mae
 ```
