Add missing year

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -198,7 +198,7 @@ _**Multiple experiments**_ relate to complementary measurement types,
 such as transcriptomic or metabolomic profiling of the microbiome or
 the host. Multiple experiments can be represented using the same
 options as alternative experiments, or by using the
-`MultiAssayExperiment` class [@R-MultiAssayExperiment]. Depending on how the 
+`MultiAssayExperiment` class [@Ramos2017]. Depending on how the 
 datasets relate to each other the data can be stored as:
 
 1. Separate _altExp_ if the samples can be matched directly 1:1; or
