--- a/book.bib
+++ b/book.bib
@@ -214,7 +214,7 @@
   keywords =	 {bioscience}
 }
 
-@Article{Ramos2017,
+@article{Ramos2017,
   title =	 {Software For The Integration Of Multi-Omics
                   Experiments In Bioconductor},
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
@@ -226,6 +226,7 @@
                   Singh Mer and Markus Reister and Martin Morgan and
                   Vincent Carey and Levi Waldron},
   journal =	 {Cancer Research},
+  year = 2017
 }
 
 @Book{Amezquita2020,
@@ -285,7 +286,7 @@
     number = {4},
     pages = {265-270},
     url = {https://www.jstor.org/stable/4615964},
-    year = {1984}
+    year = 1984
 }
 
 @article{Chao1992,
@@ -297,7 +298,7 @@
     pages = {210-217},
     doi = {https://doi.org/10.1080/01621459.1992.10475194},
     url = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1992.10475194#.YHFw5egzaHu},
-    year = {1992}
+    year = 1992
 }
 
 @article{Faith1992,
@@ -309,7 +310,7 @@
     pages = {10},
     doi = {https://doi.org/10.1016/0006-3207(92)91201-3},
     url = {https://www.sciencedirect.com/science/article/pii/0006320792912013?via%3Dihub},
-    year = {1992}
+    year = 1992
 }
 
 @Article{Friedman2012,
@@ -328,7 +329,7 @@
 @Article{GenomicRanges2013,
     title = {Software for Computing and Annotating Genomic Ranges},
     author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
-    year = {2013},
+    year = 2013,
     journal = {{PLoS} Computational Biology},
     volume = {9},
     issue = {8},
@@ -476,15 +477,6 @@
   year =	 2020,
   note =	 {R package version 1.2.0},
   url =		 {https://bioconductor.org/packages/MatrixGenerics},
-}
-
-@Manual{R-MultiAssayExperiment,
-  title =	 {MultiAssayExperiment: Software for the integration
-                  of multi-omics experiments in Bioconductor},
-  author =	 {Marcel Ramos and Levi Waldron},
-  year =	 2020,
-  note =	 {R package version 1.16.0},
-  url =		 {http://waldronlab.io/MultiAssayExperiment/},
 }
 
 @Manual{R-S4Vectors,
@@ -1113,7 +1105,7 @@
 @article{Nearing2022,
   title = {Microbiome Differential Abundance Methods Produce Different Results across 38 Datasets},
   author = {Nearing, Jacob T. and Douglas, Gavin M. and Hayes, Molly G. and MacDonald, Jocelyn and Desai, Dhwani K. and Allward, Nicole and Jones, Casey M. A. and Wright, Robyn J. and Dhanani, Akhilesh S. and Comeau, Andr{\'e} M. and Langille, Morgan G. I.},
-  year = {2022},
+  year = 2022,
   month = dec,
   journal = {Nature Communications},
   volume = {13},
@@ -1130,7 +1122,7 @@
   title = {Analysis of Composition of Microbiomes: A Novel Method for Studying Microbial Composition},
   shorttitle = {Analysis of Composition of Microbiomes},
   author = {Mandal, Siddhartha and Van Treuren, Will and White, Richard A. and Eggesb{\o}, Merete and Knight, Rob and Peddada, Shyamal D.},
-  year = {2015},
+  year = 2015,
   month = may,
   journal = {Microbial Ecology in Health \& Disease},
   volume = {26},
@@ -1159,7 +1151,7 @@
 @article{Sprockett2020,
   title = {Microbiota Assembly, Structure, and Dynamics among {{Tsimane}} Horticulturalists of the {{Bolivian Amazon}}},
   author = {Sprockett, Daniel D. and Martin, Melanie and Costello, Elizabeth K. and Burns, Adam R. and Holmes, Susan P. and Gurven, Michael D. and Relman, David A.},
-  year = {2020},
+  year = 2020,
   month = dec,
   journal = {Nat Commun},
   volume = {11},
@@ -1179,7 +1171,7 @@
   volume={6},
   number={1},
   pages={1--14},
-  year={2018},
+  year=2018,
   publisher={Springer}
 }
 
@@ -1190,14 +1182,14 @@
   volume={10},
   number={4},
   pages={e1003531},
-  year={2014},
+  year=2014,
   publisher={Public Library of Science San Francisco, USA}
 }
 
 @Manual{patchwork2022,
     title = {patchwork: The Composer of Plots},
     author = {Thomas Lin Pedersen},
-    year = {2022},
+    year = 2022,
     note = {https://patchwork.data-imaginist.com,
 https://github.com/thomasp85/patchwork},
   }
@@ -1206,7 +1198,7 @@ https://github.com/thomasp85/patchwork},
   title = {Displaying {{Variation}} in {{Large Datasets}}: {{Plotting}} a {{Visual Summary}} of {{Effect Sizes}}},
   shorttitle = {Displaying {{Variation}} in {{Large Datasets}}},
   author = {Gloor, Gregory B. and Macklaim, Jean M. and Fernandes, Andrew D.},
-  year = {2016},
+  year = 2016,
   month = jul,
   journal = {Journal of Computational and Graphical Statistics},
   volume = {25},
@@ -1223,7 +1215,7 @@ https://github.com/thomasp85/patchwork},
   title = {{{LinDA}}: Linear Models for Differential Abundance Analysis of Microbiome Compositional Data},
   shorttitle = {{{LinDA}}},
   author = {Zhou, Huijuan and He, Kejun and Chen, Jun and Zhang, Xianyang},
-  year = {2022},
+  year = 2022,
   month = dec,
   journal = {Genome Biology},
   volume = {23},
