--- a/90_acknowledgments.Rmd
+++ b/90_acknowledgments.Rmd
@@ -24,7 +24,7 @@ Human Microbiome Studies
 [@MorenoIndias2021]. The framework is based on the
 _TreeSummarizedExperiment_ data container created by Ruizhu Huang and
 others [@R-TreeSummarizedExperiment], and on the MultiAssayExperiment
-by Marcel Ramos et al. [@MultiAssayExperiment2017]. The idea of using
+by Marcel Ramos et al. [@Ramos2017]. The idea of using
 these containers as a basis for microbiome data science was initially
 advanced by the groundwork of Domenick Braccia, Héctor Corrada Bravo
 and others, and subsequently brought together with other microbiome
