Add missing year

--- a/book.bib
+++ b/book.bib
@@ -7,7 +7,7 @@
   number =	 1,
   pages =	 {32--46},
   doi =		 {10.1111/j.1442-9993.2001.01070.pp.x},
-  year =	 2001
+  year =	 {2001}
 }
 
 @Article{Callahan2016,
@@ -18,7 +18,7 @@
                   from raw reads to community analyses [version 2;
                   peer review: 3 approved]},
   journal =	 {F1000Research},
-  year =	 2016,
+  year =	 {2016},
   volume =	 5,
   pages =	 1492,
   doi =		 {10.12688/f1000research.8986.2}
@@ -29,7 +29,7 @@
                   Sequence Data in R},
   author =	 {ES Wright},
   journal =	 {The R Journal},
-  year =	 2016,
+  year =	 {2016},
   volume =	 8,
   number =	 1,
   pages =	 {352-359}
@@ -40,7 +40,7 @@
   title =	 {Modern Statistics for Modern Biology},
   publisher =	 {Cambridge University Press},
   address =	 {New York, NY},
-  year =	 2019,
+  year =	 {2019},
   url =		 {https://www.huber.embl.de/msmb/}
 }
 
@@ -57,7 +57,7 @@
   title =	 {{O}rchestrating high-throughput genomic analysis
                   with {B}ioconductor},
   journal =	 {Nature Methods},
-  year =	 2015,
+  year =	 {2015},
   volume =	 12,
   number =	 2,
   pages =	 {115--121},
@@ -80,7 +80,7 @@
   doi =		 {https://doi.org/10.1093/bioinformatics/btq166},
   url =
                   {https://academic.oup.com/bioinformatics/article/26/11/1463/203321},
-  year =	 2010
+  year =	 {2010}
 }
 
 @Article{Kurtz2015,
@@ -89,7 +89,7 @@
   title =	 {Sparse and Compositionally Robust Inference of
                   Microbial Ecological Networks},
   journal =	 {{PLoS Computational Biology}},
-  year =	 2015,
+  year =	 {2015},
   volume =	 11,
   number =	 5,
   pages =	 {e1004226},
@@ -102,11 +102,11 @@
                   M Scheffer and WM de Vos},
   title =	 {Tipping elements in the human intestinal ecosystem},
   journal =	 {Nature Communications},
-  volume =	 2014,
+  volume =	 {2014},
   issue =	 5,
   pages =	 {1-10},
   doi =		 {https://doi.org/10.1038/ncomms5344},
-  year =	 2014
+  year =	 {2014}
 }
 
 @Article{Lahti2021bioc,
@@ -996,7 +996,8 @@
   author =	 {Yagmur Simsek and Leo Lahti and Daniel Garza and
                   Karoline Faust},
   url =		 {microbiome.github.io/miaSim},
-  note =	 {Version 1.0.0}
+  note =	 {Version 1.0.0},
+  year = 2021
 }
 
 @Manual{Lahti2021,
